Remove JAXB dependency